alterações: Links dos certificados colocados, foto alterada, gap na foto, imagem anterior excluida da pasta, texto "sobre mim" incluido

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
             <p class="apresentacao-conteudo-paragrafo"> Olá! Sou Julia, desenvolvedora Front-end com especialidade em <strong>  React, HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao-links">
                 <h2 class="apresentacao-links-subtitulo"> Acesse minhas redes:</h2>
-                <a class="apresentacao-buttons" href="https:/linkedin.com/in/juliadidra"> 
+                <a class="apresentacao-buttons" href="https://www.linkedin.com/in/j%C3%BAlia-didra-b8ba6720a/"> 
                     <img src="./assets/linkedin.png" alt="">
                     Linkedin
                 </a> 
@@ -34,7 +34,7 @@
                 </a>
             </div>
         </section>
-        <img src="./assets/Imagem.png" alt="imagem de uma garota programando">  
+        <img class="apresentacao-imagem" src="./assets/foto_julia.jpg" alt="foto julia didra">  
     </main>
     <footer class="rodape">
         Desenvolvido por Julia
