--- a/about.html
+++ b/about.html
@@ -23,13 +23,15 @@
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo"> Sobre mim</h1>
             <p class="apresentacao-conteudo-paragrafo"> 
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                Olá! Meu nome é Júlia, sou uma programadora iniciante e estou atualmente cursando Análise e Desenvolvimento de Sistemas. Desde que comecei a estudar programação, me apaixonei pela capacidade de criar soluções inteligentes para problemas do mundo real.
+                Eu adoro aprender novas tecnologias e linguagens de programação, e estou sempre em busca de novos desafios para aprimorar minhas habilidades. Estou animada para aplicar tudo o que tenho aprendido em projetos futuros.
             </p>
             <p class="apresentacao-conteudo-paragrafo"> 
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.
+                Quando não estou codando, gosto de passar meu tempo assistindo filmes, ouvindo música e particando exercícios físicos. Gosto especialmente de filmes de suspense e terror, e de uma ampla variedade de gêneros musicais, desde rock e pop até mpb.
+                Acredito que a programação é uma habilidade incrivelmente valiosa nos dias de hoje, e estou animada para continuar aprendendo e desenvolvendo minhas habilidades nesta área. Estou empolgada com as possibilidades que a programação pode oferecer para resolver problemas e melhorar a vida das pessoas, e estou ansiosa para fazer parte desse movimento.
             </p>
     </section>
-    <img src="./assets/Imagem.png" alt="menina programando">
+    <img class="apresentacao-imagem" src="./assets/foto_julia.jpg" alt="foto julia didra">
     </main>
 
     <footer class="rodape">
