--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="apresentacao"> 
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo"> Eleve seu negócio digital a outro nível <strong class="destaque-titulo">com um Front-end de qualidade!</strong> </h1>
-            <p class="apresentacao-conteudo-paragrafo"> Olá! Sou Julia, desenvolvedora Front-end com especialidade em <strong>  React, HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao-conteudo-paragrafo"> Olá! Sou Julia, desenvolvedora Front-end com especialidade em <strong> HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao-links">
                 <h2 class="apresentacao-links-subtitulo"> Acesse minhas redes:</h2>
                 <a class="apresentacao-buttons" href="https://www.linkedin.com/in/j%C3%BAlia-didra-b8ba6720a/"> 
