--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img src="./assets/linkedin.png" alt="">
                     Linkedin
                 </a> 
-                <a class="apresentacao-buttons" href="https:/github.com/juliadidra"> 
+                <a class="apresentacao-buttons" href="https://www.github.com/juliadidra"> 
                     <img src="./assets/github.png" alt="">
                     Github
                 </a>
